// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Image > props > should render 1`] = `
<div
  class="relative"
  data-v-2f3a6608=""
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2f3a6608=""
    name="fade"
    persisted="false"
  >
    <div
      class="podlove-component-image-cover absolute top-0 left-0 w-full h-full"
      data-v-2f3a6608=""
    />
  </transition-stub>
  <img
    alt="alternative title"
    class="max-h-full w-auto h-0"
    data-v-2f3a6608=""
    src="http://foo.bar"
  />
</div>
`;

exports[`Image > props > should render with prop alt 1`] = `
<div
  class="relative"
  data-v-2f3a6608=""
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2f3a6608=""
    name="fade"
    persisted="false"
  >
    <div
      class="podlove-component-image-cover absolute top-0 left-0 w-full h-full"
      data-v-2f3a6608=""
    />
  </transition-stub>
  <!--v-if-->
</div>
`;

exports[`Image > props > should render with prop color 1`] = `
<div
  class="relative"
  color="#fff"
  data-v-2f3a6608=""
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2f3a6608=""
    name="fade"
    persisted="false"
  >
    <div
      class="podlove-component-image-cover absolute top-0 left-0 w-full h-full"
      data-v-2f3a6608=""
    />
  </transition-stub>
  <!--v-if-->
</div>
`;

exports[`Image > props > should render with prop url 1`] = `
<div
  class="relative"
  data-v-2f3a6608=""
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2f3a6608=""
    name="fade"
    persisted="false"
  >
    <div
      class="podlove-component-image-cover absolute top-0 left-0 w-full h-full"
      data-v-2f3a6608=""
    />
  </transition-stub>
  <img
    class="max-h-full w-auto h-0"
    data-v-2f3a6608=""
    src="http://foo.bar"
  />
</div>
`;

exports[`Image > props > should render without props 1`] = `
<div
  class="relative"
  data-v-2f3a6608=""
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2f3a6608=""
    name="fade"
    persisted="false"
  >
    <div
      class="podlove-component-image-cover absolute top-0 left-0 w-full h-full"
      data-v-2f3a6608=""
    />
  </transition-stub>
  <!--v-if-->
</div>
`;
